# spaghetti-os

./: Cargo.toml  README.md
src/: game.rs  main.rs
